# rustomato

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  renovate.json
.github/workflows/: build.yml  ci.yml  release.yml
ci/: set-pipeline
ci/pipelines/: release.yml
ci/tasks/: build-release.yml  clippy.yml  collect.yml  compress.yml  ls.yml  rustfmt.yml  test.yml
db/: schema.sql  test.sh
doc/: export.md  statemachine.drawio
doc/annotations/: README.md
doc/export/: README.md  annotations.csv  chart.gnuplot  export.sh  report.typ
doc/export/example/: README.md  chart.gnuplot  export.csv  export.sh
doc/hooks/: README.md
man/man1/: rustomato.1
migrations/: V1__initial.sql  V2__add_constraint.sql  V3__add_interruptions.sql  V4__add_annotations.sql  V5__rule_1.sql  V6__domain_constraints.sql  V7__interrupt_log.sql  V8__add_cascade_delete.sql
rustomato/: Cargo.toml
rustomato-cli/: Cargo.toml
rustomato-cli/src/: main.rs
rustomato-cli/tests/: acceptance_tests.rs
rustomato/src/: lib.rs  persistence.rs  scheduling.rs
rustomato/tests/: integration_test.rs  integration_tests.rs
src/: export.rs  hooks.rs  lib.rs  main.rs  migration.rs  persistence.rs  report.rs  rustomato.rs  scheduling.rs
src/rustomato/: persistence.rs  scheduling.rs
tests/: acceptance_tests.rs  hooks_integration_tests.rs  integration_tests.rs
