[package]
name = "rustomato"
version = "1.0.0"
authors = ["Steffen Uhlig <steffen@familie-uhlig.net>"]
edition = "2024"
build = "build.rs"
description = "Rustomato is a simple Pomodoro timer for the command line"
license = "MIT"
repository = "https://github.com/suhlig/rustomato"

[dependencies]
assert_cmd = "2.2.2"
assert_matches = "1.5.0"
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
ctrlc = "~3.5"
dirs = "~6.0"
libc = "0.2"
pbr = "1.1.1"
predicates = "~3.1"
rusqlite = { version = "~0.40.0", features = ["bundled"] }
tempfile = "3.27.0"
url = "~2.5.8"
uuid = { version = "~1.23", features = ["v4"] }
chrono = "0.4"

[[bin]]
name = "rustomato"
path = "src/main.rs"

[package.metadata.release]
publish = false
pre-release-hook = ["sh", "-c", "git cliff --unreleased --tag v${NEW_VERSION} --prepend CHANGELOG.md && git add CHANGELOG.md"]

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[build-dependencies]
built = { version = "0.8.1", features = ["git2"] }
