[package]
name = "rustomato-cli"
version = "0.0.7"
authors = ["Steffen Uhlig <steffen@familie-uhlig.net>"]
edition = "2021"

[[bin]]
name = "rustomato"
path = "src/main.rs"

[dependencies]
rustomato = { path = "../rustomato" }
clap = "3.0.0-beta.4"
url = "2.2.2"
dirs = "3.0.2"
assert_cmd = "2.0.1"
tempfile = "3.2.0"
predicates = "2.0.0"
