[package]
name = "rustomato-cli"
version = "0.0.9"
authors = ["Steffen Uhlig <steffen@familie-uhlig.net>"]
edition = "2024"
build = "build.rs"

[[bin]]
name = "rustomato"
path = "src/main.rs"

[dependencies]
rustomato = { path = "../rustomato" }
clap = { version = "4", features = ["derive", "cargo"] }
url = "2.2.2"
dirs = "3.0.2"
assert_cmd = "2.0.1"
tempfile = "3.2.0"
predicates = "2.0.0"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }
