[package]
name = "rustomato"
version = "0.0.6"
authors = ["Steffen Uhlig <steffen@familie-uhlig.net>"]
edition = "2018"

[dependencies]
ctrlc = "~3.0"
uuid = { version = "~0.8", features = ["v4"] }
rusqlite = { version = "~0.25.0", features = ["bundled"] }
pbr = "1.0.3"
refinery = { version = "~0.6", features = ["rusqlite"]}
url = "~2.2.2"
assert_matches = "1.5.0"
psutil = "3.2.1"
